fe: fix footer overlapping with following content

--- a/frontend/sass/commento-footer.scss
+++ b/frontend/sass/commento-footer.scss
@@ -3,6 +3,7 @@
 .commento-footer {
   margin: 36px 0 12px 0;
   padding-right: 12px;
+  clear: both;
 
   .commento-logo-container {
     float: right;
